--- a/docs/练习/古文诗词.md
+++ b/docs/练习/古文诗词.md
@@ -8,9 +8,9 @@
 > 为天地立心，为生民立命，为往圣继绝学，为万世开太平。
 
 
-# 一、古文
+## 一、古文
 
-## 滕王阁序
+### 滕王阁序
 ```
 滕王阁序 王勃
 
@@ -33,7 +33,7 @@
 ```
 
 
-## 赤壁赋
+### 赤壁赋
 ```
 赤壁赋 苏轼
 
@@ -46,7 +46,7 @@
 ```
 
 
-## 陋室铭
+### 陋室铭
 ```
 陋室铭 刘禹锡 
 
@@ -55,7 +55,7 @@
 　　无丝竹之乱耳，无案牍之劳形。南阳诸葛庐，西蜀子云亭。孔子云：何陋之有？
 ```
 
-## 春夜宴从弟桃花园序
+### 春夜宴从弟桃花园序
 ```
 春夜宴从弟桃花园序  李白
 
@@ -64,7 +64,7 @@
 
 ```
 
-## 生于忧患，死于安乐
+### 生于忧患，死于安乐
 ```
 生于忧患，死于安乐 先秦：孟子及其弟子
 
@@ -73,7 +73,7 @@
 　　人恒过，然后能改；困于心，衡于虑，而后作；征于色，发于声，而后喻。入则无法家拂士，出则无敌国外患者，国恒亡。然后知生于忧患而死于安乐也。
 ```
 
-## 山中与裴秀才迪书
+### 山中与裴秀才迪书
 
 ```
 山中与裴秀才迪书 王维
@@ -84,7 +84,7 @@
 
 ```
 
-## 归去来辞
+### 归去来辞
 ```
 归去来辞 陶渊明 
 
@@ -95,7 +95,7 @@
 　　已矣乎！寓形宇内复几时，曷不委心任去留，胡为遑遑欲何之？富贵非吾愿，帝乡不可期。怀良辰以孤往，或植杖而耘耔，登东皋以舒啸，临清流而赋诗。聊乘化以归尽，乐夫天命复奚疑。
 ```
 
-## 岳阳楼记
+### 岳阳楼记
 
 ```
 岳阳楼记 范仲淹
@@ -110,7 +110,7 @@
 
 ```
 
-## 千字文
+### 千字文
 ```
 千字文 周兴嗣
 
@@ -158,7 +158,7 @@
 孤陋寡闻，愚蒙等诮。谓语助者，焉哉乎也。
 ```
 
-## 般若波罗蜜多心经
+### 般若波罗蜜多心经
 
 ```
 般若波罗蜜多心经
@@ -170,7 +170,7 @@
 
 ```
 
-# 二、十首宋词
+## 二、十首宋词
 
 ```
 1、满江红
@@ -281,9 +281,9 @@
 
 ```
 
-# 三、古诗词赋百首
+## 三、古诗词赋百首
 
-## 先秦
+### 先秦
 
 ```
 1. 礼记·大道之行也
@@ -361,7 +361,7 @@
 ```
 
 
-## 汉魏晋
+### 汉魏晋
 
 ```
 1.长歌行（汉乐府）
@@ -482,9 +482,9 @@
 ```
 
 
-## 唐
+### 唐
 
-### 初唐盛唐
+#### 初唐盛唐
 
 ```
 1.送杜少府之任蜀州（王勃）
@@ -674,7 +674,7 @@
 
 ```
 
-### 李杜
+#### 李杜
 
 ```
 1、静夜思（李白）
@@ -938,7 +938,7 @@
 ```
 
 
-### 中唐晚唐
+#### 中唐晚唐
 
 ```
 
@@ -1188,7 +1188,7 @@
 
 ```
 
-## 宋
+### 宋
 
 ```
 1、浣溪沙·一曲新词酒一杯（晏殊）
@@ -1365,7 +1365,7 @@
 
 ```
 
-### 苏辛
+#### 苏辛
 
 ```
 1、水调歌头·明月几时有（苏轼）
@@ -1534,7 +1534,7 @@
 ```
 
 
-## 元明清
+### 元明清
 
 ```
 1、墨梅
@@ -1655,7 +1655,7 @@
 
 ```
 
-## 近现代
+### 近现代
 
 ```
 1、狱中题壁（谭嗣同）
@@ -1743,7 +1743,7 @@
 
 
 
-# 四、补录
+## 四、补录
 
 ```
 1、拟挽歌辞三首（晋·陶渊明） 
@@ -1797,7 +1797,7 @@
 
 
 
-# 五、编辑
+## 五、编辑
 
 ---
 
