--- a/docs/练习/笔名汉字频率分析.md
+++ b/docs/练习/笔名汉字频率分析.md
@@ -1,9 +1,9 @@
-## 笔名汉字频率分析
+# 笔名汉字频率分析
 
 数据来自《[书法练习轨迹--明月几时有]( https://xuyq123.gitlab.io/plain/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9--%E6%98%8E%E6%9C%88%E5%87%A0%E6%97%B6%E6%9C%89.html )》中关于本人笔名的记录。
 
 
-### 1、笔名分析
+## 1、笔名分析
 
 ```
 当前笔名：无为徐生
@@ -18,7 +18,7 @@
 
 ---
 
-#### 1.1、20210605
+### 1.1、20210605
 
 > 笔名
 
@@ -45,7 +45,7 @@
 
 ---
 
-#### 1.2、20210708
+### 1.2、20210708
 
 > 笔名
 
@@ -72,7 +72,7 @@
 
 ---
 
-#### 1.3、20210712
+### 1.3、20210712
 
 > 笔名
 
@@ -99,7 +99,7 @@
 
 ---
 
-#### 1.4、20210802
+### 1.4、20210802
 
 > 笔名
 
@@ -126,7 +126,7 @@
 
 ---
 
-#### 1.5、20211213
+### 1.5、20211213
 
 > 笔名
 
@@ -155,7 +155,7 @@
 
 ---
 
-#### 1.6、20220226
+### 1.6、20220226
 
 > 笔名
 
@@ -184,7 +184,7 @@
 
 
 
-### 2、明 释义
+## 2、明 释义
 
 ```
 明
@@ -225,7 +225,7 @@
 
 ---
 
-### 3、java代码
+## 3、java代码
 
 ```java
 package com.xu.calligraphy.boot.common.util;
@@ -376,7 +376,7 @@ public class CalligraphyNicknameAnalysisUtil {
 
 ---
 
-### 4、我的账号
+## 4、我的账号
 
 - **项目仓库** &ensp; [gitlab]( https://gitlab.com/xuyq123/calligraphy ) &ensp; [coding]( https://xyqin.coding.net/public/my/calligraphy/git ) &ensp; [github]( https://github.com/scott180/calligraphy )  &ensp; [bitbucket]( https://bitbucket.org/xu12345/calligraphy ) &ensp; [gitee]( https://gitee.com/xy180/calligraphy ) &ensp; [sourceforge]( https://sourceforge.net/p/calligraphy/code )  &ensp; [gitlab_docsify]( https://xuyq123.gitlab.io/shufaguiji )
 - **资讯账号** &ensp; [微信公众号]( https://mp.weixin.qq.com/s/HmdDsCaeumuZg_DfitIdlw ) &ensp; [头条]( https://www.toutiao.com/c/user/token/MS4wLjABAAAA2_bWhiknCbcKNu4c6VTM2B7m2vr7zBrh0x6fSyOrtGU ) &ensp;  [豆瓣]( https://www.douban.com/people/80730595/photos ) &ensp;  [知乎]( https://www.zhihu.com/people/xu-xian-sheng-72-29/posts ) &ensp; 
