--- a/docs/练习/书法练习轨迹--明月几时有.md
+++ b/docs/练习/书法练习轨迹--明月几时有.md
@@ -3,7 +3,7 @@
 
 ### 序
 
-人情必有所寄，习惯而成自然。练着练着，书法就成了生活的一部分，记录书法练习轨迹更是有趣有意思的点缀。不能说是点缀，于我而言，练字与记录是相辅相成、缺一不可的关系。[ReadMe]( https://xuyq123.gitlab.io/plain-docsify/#/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9ReadMe )
+人情必有所寄，习惯而成自然。练着练着，书法就成了生活的一部分，记录书法练习轨迹更是有趣有意思的点缀。不能说是点缀，于我而言，练字与记录是相辅相成、缺一不可的关系。[ReadMe]( https://xushufa.cn )
 
 <br/>
 
@@ -2252,6 +2252,34 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 一、表示是徐生的书法，徐某人的书法。 <br/>
 二、人生如练字，需要不疾不徐，不骄不躁。提醒自己要慢下来，静下去。 <br/>
 三、古有“书圣”“颜体”，高山仰止，今有“徐书法”见贤思齐。十年如一日，徐徐练习，徐书必有法。 <br/>
+
+
+---
+
+
+- [x] 76、20220328
+
+![img317]( https://codechina.csdn.net/xu180/imgs/-/raw/master/mingyue/2022/202203/2022032501.jpg )
+![img318]( https://codechina.csdn.net/xu180/imgs/-/raw/master/mingyue/2022/202203/2022032601.jpg )
+
+```
+这周（20220321-20220327）主要在忙xushufa.cn 新网站的事情。
+注册域名，买服务器，ICP备案，公安备案。速度较快，基本一周内都搞定了。
+使用mkdocs、docsify、vuepress、vuepress-theme-reco等四种工具建立了四个书法练习网站及四个博客网站。
+域名解析、绑定github、申请SSL证书、nginx部署。个人网站可以访问了。
+古老的书法与现代的网站结合在一起，将会擦出精彩的火花。
+新的旅程开启了。
+--20220327
+
+```
+
+| 徐书法 | 我的网站    |  备注          |
+| ---  | ------------- |  ------------- |
+| 1    | [xushufa]( https://xushufa.cn ) &ensp; [blog]( https://blog.xushufa.cn ) | 《书法练习轨迹》及博客网站。     |
+| 2    | [vuepress-calligraphy]( https://vuepress-calligraphy.xushufa.cn ) &ensp; [vuepress-blog]( https://vuepress-blog.xushufa.cn ) | `vuepress`构建的网站。|
+| 3    | [docsify-calligraphy]( https://docsify-calligraphy.xushufa.cn ) &ensp; [docsify-blog]( https://docsify-blog.xushufa.cn )     | `docsify`构建的网站。 |
+| 4    | [mkdocs-calligraphy]( https://mkdocs-calligraphy.xushufa.cn ) &ensp; [mkdocs-blog]( https://mkdocs-blog.xushufa.cn )         | `mkdocs`构建的网站。  |
+| 5    | [reco-calligraphy]( https://reco-calligraphy.xushufa.cn ) &ensp; [reco-blog]( https://reco-blog.xushufa.cn ) | `vuepress-theme-reco`构建的网站。|
 
 
 ---
