--- a/docs/练习/徐书法.md
+++ b/docs/练习/徐书法.md
@@ -1,12 +1,12 @@
 # 徐书法
 
-## 序章
+## 一、序章
 
 书法练习轨迹、无为徐生、徐书法，三位一体，循序渐进，成就我的书法练习之路。
 
-<h3></h3>
 
-## 书法练习轨迹
+
+## 二、书法练习轨迹
 
 于2020年9月20开始练习书法，且将练习记录及字帖记录在gitee、gitlab、github等代码托管平台，建立项目仓库《书法练习轨迹》 [calligraphy]( https://gitlab.com/xuyq123/calligraphy )。
 
@@ -23,9 +23,8 @@
 | 3    | [github]( https://github.com/scott180/calligraphy ) &ensp; [imgs]( https://github.com/scott180/imgs ) 			  			    |  世界第一git平台。但有时有防火墙打不开。          |
 
 
-<h3></h3>
 
-## 无为徐生
+## 三、无为徐生
 
 正如2021年8月《无为徐生》诞生所言：
 
@@ -48,9 +47,8 @@
 |  二维码    | ![w]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/wuweixusheng_weixin.png )    | <br/> | ![t]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/wuweixusheng_toutiao.png )     |
 
 
-<h3></h3>
 
-## 徐书法
+## 四、徐书法
 
 《徐书法》是2021年3月注册域名时灵光乍现所想，此名由来如下：
 
@@ -69,31 +67,30 @@
 
 > 徐书法 `xushufa.cn` 个人书法练习网站
 
-| 徐书法 | 我的网站 |  备注  |
+| 徐书法 | 我的网站    |  备注          |
 | ---  | ------------- |  ------------- |
 | 1    | [xushufa]( https://xushufa.cn ) &ensp; [blog]( https://blog.xushufa.cn ) | 《书法练习轨迹》及博客网站。     |
-| 2    | [vuepress-calligraphy]( https://vuepress-calligraphy.xushufa.cn ) &ensp; [vuepress-blog]( https://vuepress-blog.xushufa.cn ) | vuepress构建的网站。|
-| 3    | [docsify-calligraphy]( https://docsify-calligraphy.xushufa.cn ) &ensp; [docsify-blog]( https://docsify-blog.xushufa.cn )     | docsify构建的网站。 |
-| 4    | [mkdocs-calligraphy]( https://mkdocs-calligraphy.xushufa.cn ) &ensp; [mkdocs-blog]( https://mkdocs-blog.xushufa.cn )         | mkdocs构建的网站。  |
+| 2    | [vuepress-calligraphy]( https://vuepress-calligraphy.xushufa.cn ) &ensp; [vuepress-blog]( https://vuepress-blog.xushufa.cn ) | `vuepress`构建的网站。|
+| 3    | [docsify-calligraphy]( https://docsify-calligraphy.xushufa.cn ) &ensp; [docsify-blog]( https://docsify-blog.xushufa.cn )     | `docsify`构建的网站。 |
+| 4    | [mkdocs-calligraphy]( https://mkdocs-calligraphy.xushufa.cn ) &ensp; [mkdocs-blog]( https://mkdocs-blog.xushufa.cn )         | `mkdocs`构建的网站。  |
+| 5    | [reco-calligraphy]( https://reco-calligraphy.xushufa.cn ) &ensp; [reco-blog]( https://reco-blog.xushufa.cn ) | `vuepress-theme-reco`构建的网站。|
 
 ---
 
 > 《书法练习轨迹》及博客网站
 
-| 序号 | 类型       | 我的网站 | git静态网页 | git仓库 | 布署方法 | 
-| ---  | ---------- | -------- | ----------- | ------- | -------- |
-| 1    | -          | [xushufa]( https://xushufa.cn ) &ensp; [blog]( https://blog.xushufa.cn )   | [scott180.github.io/calligraphy]( https://scott180.github.io/calligraphy )    | [gitlab.com/xuyq123/calligraphy]( https://gitlab.com/xuyq123/calligraphy )    | nginx代理与缓存 |  
-| 2    | vuepress   | [vuepress-calligraphy]( https://vuepress-calligraphy.xushufa.cn ) <br/> [vuepress-blog]( https://vuepress-blog.xushufa.cn ) | [scott180.github.io/vuepress-calligraphy]( https://scott180.github.io/vuepress-calligraphy ) <br/> [scott180.github.io/vuepress-blog]( https://scott180.github.io/vuepress-blog )    | [vuepress-calligraphy]( https://github.com/scott180/vuepress-calligraphy.git ) <br/> [vuepress-blog]( https://github.com/scott180/vuepress-blog.git )    | github绑定域名 `vuepress-blog.xushufa.cn`    |
-| 3    | docsify   | [docsify-calligraphy]( https://docsify-calligraphy.xushufa.cn ) <br/> [docsify-blog]( https://docsify-blog.xushufa.cn ) | [scott180.github.io/docsify-calligraphy]( https://scott180.github.io/docsify-calligraphy ) <br/> [scott180.github.io/docsify-blog]( https://scott180.github.io/docsify-blog )    | [docsify-calligraphy]( https://github.com/scott180/docsify-calligraphy.git ) <br/> [docsify-blog]( https://github.com/scott180/docsify-blog.git )    | github绑定域名 `docsify-calligraphy.xushufa.cn`     |
-| 4    | mkdocs   | [mkdocs-calligraphy]( https://mkdocs-calligraphy.xushufa.cn ) <br/> [mkdocs-blog]( https://mkdocs-blog.xushufa.cn ) | [xuyq123.gitlab.io/mkdocs-calligraphy]( https://xuyq123.gitlab.io/mkdocs-calligraphy ) <br/> [xuyq123.gitlab.io/mkdocs-blog]( https://xuyq123.gitlab.io/mkdocs-blog )    | [mkdocs-calligraphy]( https://gitlab.com/xuyq123/mkdocs-calligraphy.git ) <br/> [mkdocs-blog]( https://gitlab.com/xuyq123/mkdocs-blog.git )    | gitlab绑定域名 `mkdocs-calligraphy.xushufa.cn`     |
-
+| 序号 | 类型       | 我的网站 | git静态网页 | git仓库 | 布署方法 | <div style="width: 170pt">备注</div>                    |
+| ---  | ---------- | -------- | ----------- | ------- | -------- | ----------------------  |
+| 1    | -          | [xushufa]( https://xushufa.cn ) &ensp; [blog]( https://blog.xushufa.cn )   | [scott180.github.io/calligraphy]( https://scott180.github.io/calligraphy )    | [gitlab.com/xuyq123/calligraphy]( https://gitlab.com/xuyq123/calligraphy )    | nginx代理与缓存 |  部署在服务器，有SSL证书，访问安全快速。 | 
+| 2    | vuepress   | [vuepress-calligraphy]( https://vuepress-calligraphy.xushufa.cn ) <br/> [vuepress-blog]( https://vuepress-blog.xushufa.cn ) | [scott180.github.io/vuepress-calligraphy]( https://scott180.github.io/vuepress-calligraphy ) <br/> [scott180.github.io/vuepress-blog]( https://scott180.github.io/vuepress-blog )    | [vuepress-calligraphy]( https://github.com/scott180/vuepress-calligraphy.git ) <br/> [vuepress-blog]( https://github.com/scott180/vuepress-blog.git )    | github绑定域名 `vuepress-blog.xushufa.cn`    | 输入xushufa域名会解析到github静态页面。提交代码即部署。 |
+| 3    | docsify   | [docsify-calligraphy]( https://docsify-calligraphy.xushufa.cn ) <br/> [docsify-blog]( https://docsify-blog.xushufa.cn ) | [scott180.github.io/docsify-calligraphy]( https://scott180.github.io/docsify-calligraphy ) <br/> [scott180.github.io/docsify-blog]( https://scott180.github.io/docsify-blog )    | [docsify-calligraphy]( https://github.com/scott180/docsify-calligraphy.git ) <br/> [docsify-blog]( https://github.com/scott180/docsify-blog.git )    | github绑定域名 `docsify-calligraphy.xushufa.cn`     | 同上，偶尔服务连不上。 |
+| 4    | mkdocs   | [mkdocs-calligraphy]( https://mkdocs-calligraphy.xushufa.cn ) <br/> [mkdocs-blog]( https://mkdocs-blog.xushufa.cn ) | [xuyq123.gitlab.io/mkdocs-calligraphy]( https://xuyq123.gitlab.io/mkdocs-calligraphy ) <br/> [xuyq123.gitlab.io/mkdocs-blog]( https://xuyq123.gitlab.io/mkdocs-blog )    | [mkdocs-calligraphy]( https://gitlab.com/xuyq123/mkdocs-calligraphy.git ) <br/> [mkdocs-blog]( https://gitlab.com/xuyq123/mkdocs-blog.git )    | gitlab绑定域名 `mkdocs-calligraphy.xushufa.cn`     | 输入xushufa域名会解析到gitlab静态页面。网速较慢。 |
+| 5    | vuepress-theme-reco   | [reco-calligraphy]( https://reco-calligraphy.xushufa.cn ) <br/> [reco-blog]( https://reco-blog.xushufa.cn )   | [scott180.github.io/reco-calligraphy]( https://scott180.github.io/reco-calligraphy ) <br/> [scott180.github.io/reco-blog]( https://scott180.github.io/reco-blog )    | [reco-calligraphy]( https://github.com/scott180/reco-calligraphy.git ) <br/> [reco-blog]( https://github.com/scott180/reco-blog.git )    | github绑定域名 `reco-calligraphy.xushufa.cn`    | 每个markdown文件都需要在文件头加上`Front Matter`格式，注明标题、时间、类别、标签等等。 |
  
 
 
 
-<h3></h3>
-
-## 结语
+## 五、结语
 
 2020年9月创建《书法练习轨迹》； <br/>
 2021年8月创建《无为徐生》； <br/>
