--- a/docs/练习/无为徐生.md
+++ b/docs/练习/无为徐生.md
@@ -1,6 +1,6 @@
 # 无为徐生
 
-## 1.名称说明
+## 一、名称说明
 
 ```
 无为徐生是本人昵称，笔名，也是今日头条号、微信公众号、百度百家号的名称。
@@ -17,7 +17,7 @@
 
 ```
 
-## 2.平台账号
+## 二、平台账号
 
 ### 2.1.账号地址
 
@@ -178,7 +178,7 @@
 
 ---
 
-### 2.4.徐书法
+## 三、徐书法
 
 学以致用，见贤而思齐。 <br/>
 之前《书法练习轨迹》都是保存在第三方平台，自己不能随心所欲的记录、更新。 <br/>
@@ -193,22 +193,26 @@
 
 --202203
 
-
-| 徐书法 | 我的网站 |  备注  |
-| ---  | ------------- |  ------------- |
-| 1    | [xushufa]( https://xushufa.cn ) &ensp; [blog]( https://blog.xushufa.cn ) | 《书法练习轨迹》及博客网站。     |
-| 2    | [docsify-calligraphy]( https://docsify-calligraphy.xushufa.cn ) &ensp; [docsify-blog]( https://docsify-blog.xushufa.cn ) | docsify构建的网站。 |
-| 3    | [mkdocs-calligraphy]( https://mkdocs-calligraphy.xushufa.cn ) &ensp; [mkdocs-blog]( https://mkdocs-blog.xushufa.cn )     | mkdocs构建的网站。  |
-
-
 ---
 
----
+## 四、个人账号
 
-## 3.个人账号
+> **平台**
 
-> 注册了微信公众号及今日头条号：[**无为徐生**]( https://scott180.github.io/calligraphy/%E6%97%A0%E4%B8%BA%E5%BE%90%E7%94%9F )，以后会将书法练习轨迹、程序员笔记以及一些随笔感想更新在此。<br/>
-> 每周一会在无为徐生**微信公众号**同步《书法练习轨迹》，持续更新，敬请关注。
+- 若有志同道合的小伙伴想联系本人，可通过以下方式发邮件或私信。路漫漫其修远兮，吾将上下而求索。共勉。
+
+| 平台           | 链接           |
+| -------------- | -------------- |
+|  **项目仓库**  | [gitlab]( https://gitlab.com/xuyq123/calligraphy ) &ensp; [coding]( https://xyqin.coding.net/public/my/calligraphy/git ) &ensp; [github]( https://github.com/scott180/calligraphy )  &ensp; [bitbucket]( https://bitbucket.org/xu12345/calligraphy ) &ensp; [gitee]( https://gitee.com/xy180/calligraphy ) &ensp; [sourceforge]( https://sourceforge.net/p/calligraphy/code )  &ensp; [github_docsify]( https://scott180.github.io/docsify-calligraphy )    |
+|  **资讯账号**  | [微信公众号]( https://mp.weixin.qq.com/s/HmdDsCaeumuZg_DfitIdlw ) &ensp; [头条]( https://www.toutiao.com/c/user/token/MS4wLjABAAAA2_bWhiknCbcKNu4c6VTM2B7m2vr7zBrh0x6fSyOrtGU ) &ensp;  [豆瓣]( https://www.douban.com/people/80730595/photos ) &ensp;  [知乎]( https://www.zhihu.com/people/xu-xian-sheng-72-29/posts )     |
+|  **个人邮箱**  | 1021151991@qq.com   |
+
+***
+
+> **公众号**
+
+- 注册了微信公众号及今日头条号：[**无为徐生**]( https://scott180.github.io/calligraphy/%E6%97%A0%E4%B8%BA%E5%BE%90%E7%94%9F )，以后会将书法练习轨迹、程序员笔记以及一些随笔感想更新在此。<br/>
+- 每周一会在无为徐生**微信公众号**同步《书法练习轨迹》，持续更新，敬请关注。
 
 | 无为徐生   | 微信公众号                                               	 |  &ensp; |  今日头条号        |
 | ---------  | ------------------------------------------------------------- |  -      |  ----------        |
@@ -216,4 +220,14 @@
 
 ***
 
+> **我的网站**
 
+- 徐书法 `xushufa.cn` 个人书法练习网站
+
+| 徐书法 | 我的网站 |  备注  |
+| ---  | ------------- |  ------------- |
+| 1    | [xushufa]( https://xushufa.cn ) &ensp; [blog]( https://blog.xushufa.cn ) | 《书法练习轨迹》及博客网站。     |
+| 2    | [docsify-calligraphy]( https://docsify-calligraphy.xushufa.cn ) &ensp; [docsify-blog]( https://docsify-blog.xushufa.cn ) | docsify构建的网站。 |
+| 3    | [mkdocs-calligraphy]( https://mkdocs-calligraphy.xushufa.cn ) &ensp; [mkdocs-blog]( https://mkdocs-blog.xushufa.cn )     | mkdocs构建的网站。  |
+
+***
