--- a/docs/轨迹/有感之杂说.md
+++ b/docs/轨迹/有感之杂说.md
@@ -1,6 +1,16 @@
+---
+title: 有感之杂说
+date: 2022-03-25
+tags:
+ - 练习
+ - 明月
+categories:
+ -  轨迹
+---
+
 # 有感之杂说
 
-> 文档来自《书法练习轨迹--明月几时有》中本人练字有感及生活杂谈。
+> 文档来自《[书法练习轨迹--明月几时有]( https://xushufa.cn )》中本人练字有感及生活杂谈。
 
 
 人情必有所寄，习惯而成自然。练着练着，书法就成了生活的一部分，记录书法练习轨迹更是有趣有意思的点缀。不能说是点缀，于我而言，练字与记录是相辅相成、缺一不可的关系。
@@ -23,7 +33,6 @@
 > 生活杂谈，个人感悟，一家之言，杂文杂想。
 
 - `20210125` [练字杂说](#z20210125) 
-- `20210308` [人生四象限法则](#r20210308) 
 - `20210607` [且谈杭州临安房产市场](#q20210607) 
 - `20210609` [治疗牙疼小妙招](#z20210609) 
 - `20210628` [**我的三观：制恒强变真**](#w20210628) 
@@ -31,6 +40,7 @@
 - `20210720` [有哪些第一次读到就震撼的句子?](#y20210720) 
 - `20220317` [徐书法](#x20220317) 
 
+---
 
 ## 二、练习轨迹
 
@@ -38,7 +48,7 @@
 
 <h4 id="y20201207"></h4>
 
-#### 2.1.1 有感：如何有趣的坚持练字
+#### 2.1.1、有感：如何有趣的坚持练字
 
 > **有感：如何有趣的坚持练字**？ 
 > - 每天坚持一件事，确实不容易。这周是单休，周末差点没练字，只想好好的休息。不过习惯的力量是强大的，一天不练字就感觉手痒。习惯驱使着行动坚持下去。  
@@ -54,7 +64,7 @@
 
 <h4 id="j20210111"></h4>
 
-#### 2.1.2 **阶段性反思**
+#### 2.1.2、**阶段性反思**
 
 > - 感觉越来越差。对比元旦写的字，这十天貌似看不到一丝丝的进步。对比12月份貌似也没啥区别。可能进入了所谓的“瓶颈期”。吾日三省吾身，静坐常思己过。总结一下练字历程，反思原地踏步原因。&ensp;
 1、可能是练字时间不够，虽然基本坚持早晚各练习一小时，但是练习时长可能还是短了。&ensp;
@@ -74,7 +84,7 @@
 
 <h4 id="r20210308"></h4>
 
-#### 2.1.3 人生四象限法则。未雨绸缪，把握重点。
+#### 2.1.3、人生四象限法则。未雨绸缪，把握重点。
 
 >  本周（20210301-22010307）练字较少。生活中的琐事较多，工作、相亲、房子等等。心不在此，何以安定。--20210308 <br/>
 >生活是动态的，人是变化的，不能时刻紧绷，要适当放松，书法是一种简单、实惠、合理、有深度的休闲方式。正如前几天我满心满脑的想着房子的事，想着提高技能、涨工资的事。但冲动期一过，冷静的想想，生活是一种平衡，需要不断学习也要适当放松。--20210312
@@ -109,7 +119,7 @@
 
 <h4 id="l20210812"></h4>
 
-####  2.1.4 练字必先临帖
+#### 2.1.4、练字必先临帖
 
 
 ```
@@ -124,14 +134,11 @@
 
 ---
 
-
-
-
-> 心不静，字不正。貌似进入了疲惫期，现在练字也不能让我心静了。 --20210927  <br/>
-
 <h4 id="r20210927"></h4>
 
-#### 2.1.5 如何克服疲惫期呢
+#### 2.1.5、如何克服疲惫期呢
+
+> 心不静，字不正。貌似进入了疲惫期，现在练字也不能让我心静了。 --20210927  <br/>
 
 ```
 如何克服疲惫期呢？
@@ -156,13 +163,12 @@
 
 ---
 
-
 ### 2.2、轨迹杂说
-
 
 <h4 id="z20210125"></h4>
 
-####  2.2.1 练字杂说
+#### 2.2.1、练字杂说
+
 > - 练字杂说
 - [ ]  一、坚持每日练习。
 > - 从上周（20210110-20210118）开始不用水写布，每天都是用毛边纸练字，平均早上三张，晚上五张，每天使用八张毛边纸。每张毛边纸有十五格，每格又可分为四小格，能写四个字，即每张纸可写六十个字，每天写四五百字。
@@ -190,8 +196,7 @@
 
 ---
 
-
-#### 2.2.2 且谈杭州临安房产市场
+#### 2.2.2、且谈杭州临安房产市场
 
 >  拳不离手，曲不离口。人生漫漫，练字不止。躺平与奋斗，需要一个平衡。 --20210607 <br/>
 
@@ -241,7 +246,7 @@
 
 <h4 id="z20210609"></h4>
 
-####  2.2.3 治疗牙疼小妙招
+#### 2.2.3、治疗牙疼小妙招
 
 > 前几天牙齿疼的要命，切实体验了一把：牙疼不是病，疼起来要人命。 <br/>
 网上搜了一些偏方、小妙招，其中确实有材料常见，方法简单，易于尝试的管用之法。 <br/>
@@ -268,7 +273,7 @@
 
 <h4 id="w20210628"></h4>
 
-#### 2.2.4 我的三观：**制**恒强变真
+#### 2.2.4、我的三观：**制**恒强变真
 
 ```
 我的三观：人生观、世界观、价值观，亦即人生信条、五字真言：制 恒 强 变 真。
@@ -304,7 +309,7 @@
 
 <h4 id="q20210629"></h4>
 
-#### 2.2.5 书法练习轨迹取名戏言
+#### 2.2.5、书法练习轨迹取名戏言
 
 > 所谓日有所思，夜有所梦，昨夜辗转反侧，突有所感。本人书法练习的文档名称如果都是跟“明月”相关的诗词，而且字数递增，那就相当有意思。因此取名如下。
 
@@ -348,7 +353,7 @@
 
 <h4 id="y20210720"></h4>
 
-#### 2.2.6 有哪些第一次读到就震撼的句子?
+#### 2.2.6、有哪些第一次读到就震撼的句子?
 
 ```
 有哪些第一次读到就震撼的句子?
@@ -386,7 +391,7 @@
 
 <h4 id="x20220317"></h4>
 
-#### 2.2.7 徐书法
+#### 2.2.7、徐书法
 
 学以致用，见贤而思齐。 <br/>
 之前《书法练习轨迹》都是保存在第三方平台，自己不能随心所欲的记录、更新。 <br/>
