--- a/docs/轨迹/诗词杂句.md
+++ b/docs/轨迹/诗词杂句.md
@@ -1,6 +1,17 @@
+---
+title: 诗词杂句
+date: 2022-03-26
+tags:
+ - 练习
+ - 明月
+ - 诗词
+categories:
+ -  轨迹
+---
+
 # 诗词杂句
 
-> 统计总合《书法练习轨迹》中本人所作的诗词杂句。
+> 统计总合《[书法练习轨迹]( https://xushufa.cn )》中本人所作的诗词杂句。
 
 ---
 
