--- a/docs/练习/笔名汉字频率分析.md
+++ b/docs/练习/笔名汉字频率分析.md
@@ -1,6 +1,6 @@
 # 笔名汉字频率分析
 
-数据来自《[书法练习轨迹--明月几时有]( https://xuyq123.gitlab.io/plain/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9--%E6%98%8E%E6%9C%88%E5%87%A0%E6%97%B6%E6%9C%89.html )》中关于本人笔名的记录。
+数据来自《[书法练习轨迹--明月几时有]( https://xushufa.cn )》中关于本人笔名的记录。
 
 
 ## 1、笔名分析
