--- a/docs/轨迹/自序.md
+++ b/docs/轨迹/自序.md
@@ -1,6 +1,16 @@
+---
+title: 自序
+date: 2022-03-27
+tags:
+ - 练习
+ - ReadMe
+categories:
+ -  轨迹
+---
+
 # 自序
 
-> 文档来自《书法练习轨迹》中本人自序。 
+> 文档来自《[书法练习轨迹]( https://xushufa.cn )》中本人自序。 
 
 ## 1、慎独
 
