--- a/docs/练习/关于我.md
+++ b/docs/练习/关于我.md
@@ -1,5 +1,6 @@
 # 关于我
 
+## 介绍
 
 九零后，程序员，热爱生活、乐于记录的普通青年。
 
@@ -24,7 +25,7 @@
 
 我的笔名是《无为徐生》 <br/>
 书法练习记录叫做《书法练习轨迹》 <br/>
-徐书法则是两者结合 <br/>
+而《徐书法》则是两者结合 <br/>
 徐书法是我的书法&ensp;是无为徐生的书法 <br/>
 是书法练习轨迹的目标&ensp;是我练习书法的梦想 <br/>
 三位一体&ensp;循序渐进&ensp;漫漫长路&ensp;持之以恒 <br/>
@@ -33,7 +34,9 @@
 
 <br/>
 
-> 我的网站
+## 账号
+
+> 我的网站：徐书法 `xushufa.cn`
 
 **个人程序员笔记及书法练习轨迹。**
 
@@ -46,7 +49,36 @@
 | 5    | [reco-calligraphy]( https://reco-calligraphy.xushufa.cn ) &ensp; [reco-blog]( https://reco-blog.xushufa.cn ) | `vuepress-theme-reco`构建的网站。|
 
 
+---
+
+<br/>
+
+> 公众号：无为徐生
+
+**微信公众号，每周一在此更新书法练习轨迹。** 
+
+[话题]( https://mp.weixin.qq.com/mp/appmsgalbum?__biz=Mzg4NDY2OTM0Mg==&action=getalbum&album_id=2015671980393365504 ) &ensp; [二维码]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/wuweixusheng_weixin.png )
+
 
 ---
 
+<br/>
+
+> git仓库：书法练习轨迹
+
+**记录每周练字情况、字帖照片及一些感想。**
+
+[**gitlab**]( https://gitlab.com/xuyq123/calligraphy ) &ensp; [github]( https://github.com/scott180/calligraphy ) &ensp;  [coding]( https://xyqin.coding.net/public/my/calligraphy/git ) 
+
+
+---
+
+<br/>
+
+> 个人邮箱 
+
+1021151991@qq.com 
+
+
+---
 
