--- a/docs/练习/关于我.md
+++ b/docs/练习/关于我.md
@@ -23,18 +23,44 @@
 
 **书法爱好者，练字中。**
 
-我的笔名是《无为徐生》 <br/>
-书法练习记录叫做《书法练习轨迹》 <br/>
-而《徐书法》则是两者结合 <br/>
-徐书法是我的书法&ensp;是无为徐生的书法 <br/>
-是书法练习轨迹的目标&ensp;是我练习书法的梦想 <br/>
-三位一体&ensp;循序渐进&ensp;漫漫长路&ensp;持之以恒 <br/>
+起初&ensp;对书法有兴趣 <br/>
+开始练字&ensp;找个地方记录练习历程 <br/>
+左思右想&ensp;`项目`取名叫做《书法练习轨迹》 <br/>
+
+后来&ensp;内容变多  <br/>
+倾诉欲更强&ensp;注册了公众号 <br/>
+综合考虑&ensp;`笔名`及账号《无为徐生》诞生了 <br/>
+
+现在&ensp;记录已成习惯  <br/>
+于是注册域名&ensp;自建`网站`  <br/>
+两者集合&ensp;创造了《徐书法》 <br/>
 
 ---
 
 <br/>
 
 ## 账号
+
+> git项目：书法练习轨迹
+
+**记录每周练字情况、字帖照片及一些感想。**
+
+[**gitlab**]( https://gitlab.com/xuyq123/calligraphy ) &ensp; [github]( https://github.com/scott180/calligraphy ) &ensp;  [coding]( https://xyqin.coding.net/public/my/calligraphy/git ) 
+
+---
+
+<br/>
+
+> 公众号：无为徐生
+
+**微信公众号，每周一在此更新书法练习轨迹。** 
+
+[话题]( https://mp.weixin.qq.com/mp/appmsgalbum?__biz=Mzg4NDY2OTM0Mg==&action=getalbum&album_id=2015671980393365504 ) &ensp; [二维码]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/wuweixusheng_weixin.png )
+
+---
+
+<br/>
+
 
 > 我的网站：徐书法 `xushufa.cn`
 
@@ -48,30 +74,8 @@
 | 4      | [mkdocs-calligraphy]( https://mkdocs-calligraphy.xushufa.cn ) &ensp; [mkdocs-blog]( https://mkdocs-blog.xushufa.cn )         | `mkdocs`构建的网站。  |
 | 5      | [reco-calligraphy]( https://reco-calligraphy.xushufa.cn ) &ensp; [reco-blog]( https://reco-blog.xushufa.cn ) | `vuepress-theme-reco`构建的网站。     |
 
-
 ---
 
-<br/>
-
-> 公众号：无为徐生
-
-**微信公众号，每周一在此更新书法练习轨迹。** 
-
-[话题]( https://mp.weixin.qq.com/mp/appmsgalbum?__biz=Mzg4NDY2OTM0Mg==&action=getalbum&album_id=2015671980393365504 ) &ensp; [二维码]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/wuweixusheng_weixin.png )
-
-
----
-
-<br/>
-
-> git仓库：书法练习轨迹
-
-**记录每周练字情况、字帖照片及一些感想。**
-
-[**gitlab**]( https://gitlab.com/xuyq123/calligraphy ) &ensp; [github]( https://github.com/scott180/calligraphy ) &ensp;  [coding]( https://xyqin.coding.net/public/my/calligraphy/git ) 
-
-
----
 
 <br/>
 
