--- a/docs/练习/书法练习轨迹--明月几时有.md
+++ b/docs/练习/书法练习轨迹--明月几时有.md
@@ -2313,7 +2313,13 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 建立工具网站 https://tool.xushufa.cn ，在线预览markdown、解析json、url解码、时间戳转换等。
 ```
 
+---
 
+```
+坚韧不拔：坚定 坚持 坚韧 坚毅 坚强。
+自强不息：自制 自立 自信 自强 自我。
+
+```
 
 ---
 ---
