--- a/docs/练习/笔名汉字频率分析.md
+++ b/docs/练习/笔名汉字频率分析.md
@@ -1,7 +1,10 @@
 # 笔名汉字频率分析
 
-数据来自《[书法练习轨迹--明月几时有]( https://xushufa.cn )》中关于本人笔名的记录。
+<br />
 
+> 数据来自《[书法练习轨迹--明月几时有]( https://xushufa.cn )》中关于本人笔名的记录。
+
+<br />
 
 ## 1、笔名分析
 
