--- a/docs/轨迹/诗词杂句.md
+++ b/docs/轨迹/诗词杂句.md
@@ -11,9 +11,11 @@ categories:
 
 # 诗词杂句
 
+<br />
+
 > 统计总合《[书法练习轨迹]( https://xushufa.cn )》中本人所作的诗词杂句。
 
----
+<br />
 
 ## 1、诗词
 
@@ -211,3 +213,13 @@ categories:
 ```
 
 ---
+
+```
+坚韧不拔：坚定 坚持 坚韧 坚毅 坚强。
+自强不息：自制 自立 自信 自强 自我。
+--20220406
+
+```
+
+---
+
