--- a/docs/练习/书法练习轨迹--明月几时有.md
+++ b/docs/练习/书法练习轨迹--明月几时有.md
@@ -1,5 +1,7 @@
 # 书法练习轨迹--明月几时有
 
+<br />
+
 > [**地址**]( https://xushufa.cn ) &ensp; [gitlab]( https://gitlab.com/xuyq123/calligraphy ) &ensp; [coding]( https://xyqin.coding.net/public/my/calligraphy/git ) &ensp; [github]( https://github.com/scott180/calligraphy )  &ensp; [blog]( https://blog.xushufa.cn ) 
 
 ## 序
@@ -2318,6 +2320,72 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 ```
 坚韧不拔：坚定 坚持 坚韧 坚毅 坚强。
 自强不息：自制 自立 自信 自强 自我。
+
+```
+
+---
+
+- [x] 78、20220411
+
+![img321]( https://codechina.csdn.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040601.jpg )
+![img322]( https://codechina.csdn.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040701.jpg )
+
+---
+
+![img323]( https://codechina.csdn.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040801.jpg )
+![img324]( https://codechina.csdn.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040901.jpg )
+
+```
+这周单休，看了两部电影，其中两处场景印象深刻。
+
+冯小刚导演的《私人订制》，结尾有记者采访葛优扮演的杨经理。
+问：你有一百万，你会捐出去吗？
+答：会。
+问：你有一千万呢？
+答：会。
+问：你有一亿呢？
+答：会。
+问：如果你有一辆汽车呢，你会捐吗？
+葛优张头四望。
+答：这个不能捐。
+问：你有一千万，一个亿都会捐，为什么一辆车就不捐了？
+答：因为我真有一辆车。
+
+
+谢晋导演1984年拍的电影《高山下的花环》，其中有一幕。
+将上前线时，赵蒙生准备调走，梁三喜对他说：“中国，是我的，可也是你的”。
+
+--20220411
+
+```
+
+```
+春望
+唐 杜甫
+国破山河在，城春草木深。
+感时花溅泪，恨别鸟惊心。
+烽火连三月，家书抵万金。
+白头搔更短，浑欲不胜簪。
+
+```
+
+---
+
+- [x] 79、20220418
+
+![img325]( https://codechina.csdn.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022041301.jpg )
+![img326]( https://codechina.csdn.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022041501.jpg )
+
+---
+
+```
+人定胜天。
+
+人生无常，大肠包小肠。
+
+命里有时终须有，命里无时莫强求。
+
+一命二运三风水，四积功德五读书，六择业七择偶，八交贵人九养生。
 
 ```
 
