--- a/docs/练习/关于我.md
+++ b/docs/练习/关于我.md
@@ -39,6 +39,8 @@
 
 <br/>
 
+
+
 ## 账号
 
 > git项目：书法练习轨迹
@@ -62,26 +64,25 @@
 <br/>
 
 
-> 我的网站：徐书法 `xushufa.cn`
 
-**个人程序员笔记及书法练习轨迹。**
+## 网站
 
-| 徐书法 | 我的网站    |  备注          |
+> 博客网站
+
+**生活随笔-编程笔记-书法练习轨迹。**
+
+|        | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
-| 1      | [xushufa]( https://xushufa.cn ) &ensp; [blog]( https://blog.xushufa.cn ) | 《书法练习轨迹》及博客网站。      |
-| 2      | [vuepress-calligraphy]( https://vuepress-calligraphy.xushufa.cn ) &ensp; [vuepress-blog]( https://vuepress-blog.xushufa.cn ) | `vuepress`构建的网站。|
-| 3      | [docsify-calligraphy]( https://docsify-calligraphy.xushufa.cn ) &ensp; [docsify-blog]( https://docsify-blog.xushufa.cn )     | `docsify`构建的网站。 |
-| 4      | [mkdocs-calligraphy]( https://mkdocs-calligraphy.xushufa.cn ) &ensp; [mkdocs-blog]( https://mkdocs-blog.xushufa.cn )         | `mkdocs`构建的网站。  |
-| 5      | [reco-calligraphy]( https://reco-calligraphy.xushufa.cn ) &ensp; [reco-blog]( https://reco-blog.xushufa.cn ) | `vuepress-theme-reco`构建的网站。     |
+| 1      | [xushufa.cn]( https://xushufa.cn )            | 书法练习网站。 |
+| 2      | [blog.xushufa.cn]( https://blog.xushufa.cn )  | `vuepress`构建的博客网站。 |
+| 3      | [web.xushufa.cn]( https://web.xushufa.cn )    | `vuepress-theme-reco`构建的博客网站。|
 
 
 ---
 
-
 <br/>
 
-
-> 相关网站
+> 工具网站
 
 **工具网站及网站地图。**
 
@@ -90,11 +91,12 @@
 | 1      | [tool.xushufa.cn]( https://tool.xushufa.cn ) | 工具网站。在线预览markdown、解析json、url解码、时间戳转换等。  |
 | 2      | [md.xushufa.cn]( https://md.xushufa.cn )     | xushufa网站地图，nginx网页目录结构。|
 
-
 ---
 
-
 <br/>
+
+
+
 
 > 个人邮箱 
 
