--- a/docs/书法/《心经》书法.md
+++ b/docs/书法/《心经》书法.md
@@ -2,17 +2,24 @@
 
 <br />
 
-```
-《心经》全称《般若波罗密多心经》，简称《般若心经》或《心经》，是佛经中字数最少，但影响最大的一部经典著作。
-其中的“心”（梵文hrdaya ），指心脏，含精要、心髓之意。
-本经系将内容庞大的般若，经浓缩成为表现“般若皆空”精神的简洁经典，全经举出五蕴、三科、十二因缘、四谛等法，以总述诸法皆空之理。
+- 《心经》全称《般若波罗密多心经》，简称《般若心经》或《心经》，是佛经中字数最少，但影响最大的一部经典著作。其中的“心”（梵文hrdaya ），指心脏，含精要、心髓之意。
+- 本经系将内容庞大的般若，经浓缩成为表现“般若皆空”精神的简洁经典，全经举出五蕴、三科、十二因缘、四谛等法，以总述诸法皆空之理。
+ 
+- 至宋朝为止，《心经》可考译本最少11本，现存9本。其中以玄奘大师译本流传最广。此本略去序文等，只保留正宗部分，
+- 全文仅260字，词寡而旨深，是般若经类的提要、经典，高度浓缩佛教的教义。但是里面的内容广博，从五蕴空讲到一切皆空，可以说包括了一切佛法。
 
-至宋朝为止，《心经》可考译本最少11本，现存9本。
-其中以玄奘大师译本流传最广。此本略去序文等，只保留正宗部分，
-全文仅260字，词寡而旨深，是般若经类的提要、经典，高度浓缩佛教的教义。
-但是里面的内容广博，从五蕴空讲到一切皆空，可以说包括了一切佛法。
 
-```
+---
+
+> 心经
+
+- 观自在菩萨，行深般若波罗蜜多时，照见五蕴皆空，度一切苦厄。
+- 舍利子，色不异空，空不异色，色即是空，空即是色，受想行识亦复如是。
+- 舍利子，是诸法空相，不生不灭，不垢不净，不增不减。是故空中无色，无受想行识，无眼耳鼻舌身意，无色声香味触法，无眼界乃至无意识界，无无明亦无无明尽，乃至无老死，亦无老死尽，无苦集灭道，无智亦无得。
+- 以无所得故，菩提萨埵。依般若波罗蜜多故，心无挂碍；无挂碍故，无有恐怖，远离颠倒梦想，究竟涅槃。
+- 三世诸佛，依般若波罗蜜多故，得阿耨多罗三藐三菩提。
+- 故知般若波罗蜜多，是大神咒，是大明咒，是无上咒，是无等等咒，能除一切苦，真实不虚。
+- 故说般若波罗蜜多咒，即说咒曰：揭谛揭谛　波罗揭谛　波罗僧揭谛　菩提萨婆诃。
 
 ---
 
@@ -80,18 +87,6 @@ jiē dì jiē dì, bō luó jiē dì, bō luó sēng jiē dì, pú tí sà pó h
 揭谛揭谛，波罗揭谛，波罗僧揭谛，菩提萨婆诃。
 
 ```
-
----
-
-心经
-
-　　观自在菩萨，行深般若波罗蜜多时，照见五蕴皆空，度一切苦厄。
-　　舍利子，色不异空，空不异色，色即是空，空即是色，受想行识亦复如是。
-　　舍利子，是诸法空相，不生不灭，不垢不净，不增不减。是故空中无色，无受想行识，无眼耳鼻舌身意，无色声香味触法，无眼界乃至无意识界，无无明亦无无明尽，乃至无老死，亦无老死尽，无苦集灭道，无智亦无得。
-　　以无所得故，菩提萨埵。依般若波罗蜜多故，心无挂碍；无挂碍故，无有恐怖，远离颠倒梦想，究竟涅槃。
-　　三世诸佛，依般若波罗蜜多故，得阿耨多罗三藐三菩提。
-　　故知般若波罗蜜多，是大神咒，是大明咒，是无上咒，是无等等咒，能除一切苦，真实不虚。
-　　故说般若波罗蜜多咒，即说咒曰：揭谛揭谛　波罗揭谛　波罗僧揭谛　菩提萨婆诃。
 
 ---
 
