--- a/docs/轨迹/有感之杂说.md
+++ b/docs/轨迹/有感之杂说.md
@@ -120,6 +120,24 @@ categories:
 
 ---
 
+> 身体是革命的本钱，健康是1，金钱、名誉、地位、房子、车子……这些都是0。 --20220426
+
+| 时间管理 | 重要    | 一般     | 不重要   |
+| ----     | ----    | -----    | -----    |
+| 紧急     | 吃饭    | 锻炼身体 | 休闲娱乐     |
+| 一般     | 学习、孝敬父母 | 工作     | 看电影、玩游戏  |
+| 不紧急   | 思考、理财     | 结婚生子 | 旅游  |
+
+```
+吃饭不积极，思想有问题。
+学而不思则罔，思而不学则殆。
+行胜于言，知行合一。
+人是一根有思想的芦苇。
+
+```
+
+---
+
 <h4 id="l20210812"></h4>
 
 #### 2.1.4、练字必先临帖
