--- a/docs/练习/书法练习轨迹--明月几时有.md
+++ b/docs/练习/书法练习轨迹--明月几时有.md
@@ -2443,6 +2443,26 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 ```
 
+- [x] 81、20220502
+
+![img335]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022042701.jpg )
+![img336]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022042901.jpg )
+
+```
+沧海一声笑 滔滔两岸潮
+浮沉随浪 只记今朝
+苍天笑 纷纷世上潮
+谁负谁胜出 天知晓
+江山笑 烟雨遥
+涛浪淘尽红尘俗世几多娇
+清风笑 竟若寂寥
+豪情还剩了一襟晚照
+苍生笑 不再寂寥
+豪情仍在痴痴笑笑
+啦……
+
+```
+
 ---
 
 <div STYLE="page-break-after: always;"></div>
@@ -2593,13 +2613,13 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 > **我的网站**
 
-- 徐书法 `xushufa.cn` 个人书法练习网站
+- 生活随笔-编程笔记-书法练习轨迹
 
-| 徐书法 | 我的网站    |  备注          |
+| 徐书法 | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
-| 1      | [xushufa]( https://xushufa.cn ) &ensp; [blog]( https://blog.xushufa.cn ) | 《书法练习轨迹》及博客网站。      |
-| 2      | [mkdocs-calligraphy]( https://mkdocs-calligraphy.xushufa.cn ) &ensp; [mkdocs-blog]( https://mkdocs-blog.xushufa.cn )         | `mkdocs`构建的网站。  |
-| 3      | [reco-calligraphy]( https://reco-calligraphy.xushufa.cn ) &ensp; [reco-blog]( https://reco-blog.xushufa.cn ) | `vuepress-theme-reco`构建的网站。     |
+| 1      | [xushufa.cn]( https://xushufa.cn )            | 书法练习网站。 |
+| 2      | [blog.xushufa.cn]( https://blog.xushufa.cn )  | `vuepress`构建的博客网站。 |
+| 3      | [web.xushufa.cn]( https://web.xushufa.cn )    | `vuepress-theme-reco`构建的博客网站。|
 
 ***
 
